--- a/smak/HTML/css/main.css
+++ b/smak/HTML/css/main.css
@@ -1,10 +1,3 @@
-/*
- * A Design by GraphBerry
- * Author: GraphBerry
- * Author URL: http://graphberry.com
- * License: http://graphberry.com/pages/license
- */
-
 body {
 	font-family: 'Oswald', sans-serif;
 	font-size: 16px;
@@ -34,7 +27,7 @@ p {
 a,
 a:hover,
 a:focus {
-	color: rgb(0, 255, 84);
+	color: #0085C5;
 }
 .row {
 	margin-bottom: 50px;
@@ -83,7 +76,7 @@ a:focus {
 
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus,
 .navbar-nav > li.active > a {
-	color: rgb(0, 255, 84);
+	color: #0085C5;
 	background: transparent;
 }
 
@@ -127,8 +120,8 @@ a:focus {
 
 .btn-primary {
 	color: #000;
-	background: rgb(0, 255, 84);
-	border: 1px solid rgb(0, 255, 84);
+	background: #0085C5;
+	border: 1px solid #0085C5;
 	display: inline-block;
 	margin: 10px;
 	position: relative;
@@ -139,7 +132,7 @@ a:focus {
 }
 
 .btn-primary:hover {
-	background: rgb(0, 255, 84);
+	background: #0085C5;
 	color: #000;
 	border: none;
 }
@@ -147,7 +140,7 @@ a:focus {
 .btn-primary:before {
 	content: '';
 	position: absolute;
-	border: rgb(0, 255, 84) solid 4px;
+	border: #0085C5 solid 4px;
 	top: 0;
 	right: 0;
 	bottom: 0;
@@ -165,7 +158,7 @@ a:focus {
 	left: -8px;
 }
 .go-to {
-	background: rgb(0, 255, 84);
+	background: #0085C5;
 	position: absolute;
 	left: 50%;
 	margin-left: -30px;
@@ -185,7 +178,7 @@ a:focus {
 }
 .navbar-nav > li > a:hover {
 	background-color: transparent;
-	color: rgb(0, 255, 84);
+	color: #0085C5;
 }
 .gray {
 	background: #FBFBFB;
@@ -252,7 +245,7 @@ a:focus {
 	line-height: 42px;
 	text-align: center;
 	vertical-align: middle;
-	color: rgb(0, 255, 84);
+	color: #0085C5;
 }
 .navbar-nav > li:first-child > a:before,
 .nav-pills > li:first-child > a:before {
@@ -264,11 +257,11 @@ a:focus {
 .nav-pills > li.active > a:focus,
 .nav-pills > li > a:hover,
 .nav-pills > li > a:focus {
-	color: rgb(0, 255, 84);
+	color: #0085C5;
 	background: transparent;
 }
 .square-l {
-	background: rgb(0, 255, 84);
+	background: #0085C5;
 	color: #fff;
 	vertical-align: middle;
 }
@@ -283,7 +276,7 @@ a:focus {
 	color: #fff;
 }
 .process-item .fa {
-	color: #FFCF03;
+	color: #0085C5;
 }
 
 .team{
@@ -344,7 +337,7 @@ a:focus {
 }
 
 .team-extended h3{
-	color: rgb(0, 255, 84);
+	color: #0085C5;
 }
 
 .team-extended p{
@@ -382,14 +375,14 @@ cursor: pointer;
 	transform: rotate(-45deg);
 }
 .team-extended .social:hover{
-	color: rgb(0, 255, 84);
-	border-color: rgb(0, 255, 84);
+	color: #0085C5;
+	border-color: #0085C5;
 }
  
 .team-member .name {
 	display: block;
 	text-transform: uppercase;
-	color: rgb(0, 255, 84);
+	color: #0085C5;
 	font-size: 20px;
 	margin-bottom: 10px;
 }
@@ -463,7 +456,7 @@ background-attachment: fixed;
 }
 .chart,
 .chart h3 {
-	color: rgb(0, 255, 84);
+	color: #0085C5;
 }
 .percent {
 	display: block;
@@ -479,7 +472,7 @@ background-attachment: fixed;
 }
 .number-item {
 	text-align: center;
-	border: 1px solid rgb(0, 255, 84);
+	border: 1px solid #0085C5;
 	padding: 20px;
 }
 .number-item .number {
@@ -495,12 +488,12 @@ background-attachment: fixed;
 	font-size: 20px;
 }
 .number-item .text {
-	color: rgb(0, 255, 84);
+	color: #0085C5;
 	font-size: 16px;
 	text-transform: uppercase;
 }
 .circle {
-	background: #FFCF03;
+	background: #0085C5;
 	display: inline-block;
 	width: 50px;
 	height: 50px;
@@ -547,7 +540,7 @@ background-attachment: fixed;
 .divider > span {
 	display: inline-block;
 	width: 170px;
-	background: #FFCF03;
+	background: #0085C5;
 	height: 2px;
 }
 .adress-element {
@@ -555,7 +548,7 @@ background-attachment: fixed;
 	margin-bottom: 50px;
 }
 .adress-element .fa {
-	color: #FFCF03;
+	color: #0085C5;
 }
 .lb_wrap {
 	width: 100%;
@@ -622,7 +615,7 @@ Images
 
 .error-code{
 	font-size: 150px;
-	color: rgb(0, 255, 84);
+	color: #0085C5;
 	margin: 0;
 
 }
@@ -1021,7 +1014,7 @@ Forms
 }
 .client-nav > li > a {
 	color: #fff;
-	background: rgb(0, 255, 84);
+	background: #0085C5;
 	color: #fff;
 	vertical-align: middle;
 	width: 30px;
@@ -1036,7 +1029,7 @@ Forms
 ********************************************/
 
 .primary-color {
-	color: rgb(0, 255, 84);
+	color: #0085C5;
 }
 /********************************************
 				CONTACT FORM
@@ -1122,7 +1115,7 @@ footer .social-list li {
 }
 
 footer .to-top {
-	background: #FFCF03;
+	background: #0085C5;
 	width: 30px;
 	height: 30px;
 	display: block;
@@ -1295,7 +1288,7 @@ RESPONSIVE
 
 .loader{
 	display: block;
-	background: rgb(0, 255, 84);
+	background: #0085C5;
 	position:fixed; 
 	top:0; left:0; right:0; bottom:0;
 	width:100%; 
