converting to rem units, base 10px on body

--- a/smak/HTML/css/main.css
+++ b/smak/HTML/css/main.css
@@ -1,6 +1,6 @@
 body {
 	font-family: 'Oswald', sans-serif;
-	font-size: 16px;
+	font-size: 10px;
 	color: #707070;
 	font-weight: lighter;
 }
@@ -16,10 +16,10 @@ h1,h2,h3,h4,h5,h6 {
 visibility:hidden;
 }
 h3 {
-	font-size: 20px;
+	font-size: 2rem;
 }
 h4 {
-	font-size: 16px;
+	font-size: 1.6rem;
 }
 p {
 	color: #707070;
@@ -30,7 +30,7 @@ a:focus {
 	color: #0085C5;
 }
 .row {
-	margin-bottom: 50px;
+	margin-bottom: 5rem;
 }
 
 .nav > li > a{
@@ -43,7 +43,7 @@ a:focus {
 }
 
 .navbar-smak .nav {
-	padding: 25px 0;
+	padding: 2.5rem 0;
 }
 
 .navbar-small {
@@ -51,15 +51,15 @@ a:focus {
 }
 
 .navbar-small .nav {
-	padding: 5px 0 !important;
+	padding: 0.5rem 0 !important;
 }
 
 .navbar-small .navbar-brand > img {
-	height: 40px;
+	height: 4rem;
 }
 
 .navbar-small .navbar-brand {
-	padding: 5px 15px 0 0;
+	padding: 0.5rem 1.5rem 0 0;
 }
 
 .nav > li > a {
@@ -67,7 +67,7 @@ a:focus {
 }
 
 .navbar-brand > img {
-	height: 60px;
+	height: 6rem;
 }
 
 .navbar-nav > li > a {
@@ -81,9 +81,9 @@ a:focus {
 }
 
 .navbar-nav > li > .dropdown-menu {
-	margin-top: -5px;;
-	border-top-right-radius: 4px;
-	border-top-left-radius: 4px;
+	margin-top: -0.5rem;
+	border-top-right-radius: 0.4rem;
+	border-top-left-radius: 0.4rem;
 }
 
 .home {
@@ -96,34 +96,34 @@ a:focus {
 .slide {
 	position: absolute;
 	top: 50%;
-	margin-top: -135px;
+	margin-top: -13.5rem;
 	width: 100%;
 	text-align: center;
 	background-image: url(../img/patern.png);
 	display: inline-block;
-	padding: 40px;
+	padding: 4rem;
 }
 .lead {
 	display: block;
 	color: #fff;
 	font-weight: bold;
-	font-size: 65px;
+	font-size: 6.5rem;
 	text-transform: uppercase;
 	width: 80%;
 	margin: 0 auto;
 }
 .btn {
 	border-radius: 0;
-	padding: 10px 35px;
-	font-size: 15px;
+	padding: 1rem 3.5rem;
+	font-size: 1.5rem;
 }
 
 .btn-primary {
 	color: #000;
 	background: #0085C5;
-	border: 1px solid #0085C5;
+	border: 0.1rem solid #0085C5;
 	display: inline-block;
-	margin: 10px;
+	margin: 1rem;
 	position: relative;
 	-webkit-transform: translateZ(0);
 	-ms-transform: translateZ(0);
@@ -140,7 +140,7 @@ a:focus {
 .btn-primary:before {
 	content: '';
 	position: absolute;
-	border: #0085C5 solid 4px;
+	border: #0085C5 solid 0.4rem;
 	top: 0;
 	right: 0;
 	bottom: 0;
@@ -152,21 +152,21 @@ a:focus {
 }
 
 .btn-primary:hover:before {
-	top: -8px;
-	right: -8px;
-	bottom: -8px;
-	left: -8px;
+	top: -0.8rem;
+	right: -0.8rem;
+	bottom: -0.8rem;
+	left: -0.8rem;
 }
 .go-to {
 	background: #0085C5;
 	position: absolute;
 	left: 50%;
-	margin-left: -30px;
+	margin-left: -3rem;
 	bottom: 0;
-	line-height: 60px;
+	line-height: 6rem;
 	text-align: center;
-	width: 60px;
-	height: 60px;
+	width: 6rem;
+	height: 6rem;
 	display: block;
 	color: #fff;
 }
@@ -174,7 +174,7 @@ a:focus {
 	color: #fff;
 }
 .go-to .fa {
-	line-height: 60px;
+	line-height: 6rem;
 }
 .navbar-nav > li > a:hover {
 	background-color: transparent;
@@ -184,21 +184,21 @@ a:focus {
 	background: #FBFBFB;
 }
 .service-item {
-	padding: 0 20px;
+	padding: 0 2rem;
 	text-align: center;
 }
 
 .about-item{
-	margin-bottom: 50px;
+	margin-bottom: 5rem;
 }
 .about-item i {
-	font-size: 25px;
-	line-height: 50px;
+	font-size: 2.5rem;
+	line-height: 5rem;
 	color: #fff;
 }
 .about-item h4,
 .about-item p {
-	margin-left: 70px;
+	margin-left: 7rem;
 }
 
 .about-item h4{
@@ -215,7 +215,7 @@ a:focus {
 }
 .centered-pills ul.nav-pills {
 	display: inline-block;
-	margin-bottom: 50px;
+	margin-bottom: 5rem;
 }
 .centered-pills li {
 	display: inline;
@@ -228,9 +228,9 @@ a:focus {
 }
 .nav-pills > li > a {
 	text-transform: uppercase;
-	font-size: 16px;
+	font-size: 1.6rem;
 	color: #707070;
-	padding: 10px 0;
+	padding: 1rem 0;
 }
 .mix {
 	opacity: 0;
@@ -239,10 +239,10 @@ a:focus {
 .navbar-nav > li > a:before,
 .nav-pills > li > a:before {
 	content: "\f0c8";
-	margin: 0 15px;
+	margin: 0 1.5rem;
 	font-family: "FontAwesome";
-	font-size: 5px;
-	line-height: 42px;
+	font-size: 0.5rem;
+	line-height: 4.2rem;
 	text-align: center;
 	vertical-align: middle;
 	color: #0085C5;
@@ -267,12 +267,12 @@ a:focus {
 }
 
 .square-l {
-	width: 60px;
-	height: 60px;
+	width: 6rem;
+	height: 6rem;
 	display: inline-block
 }
 .square-l .fa {
-	line-height: 60px;
+	line-height: 6rem;
 	color: #fff;
 }
 .process-item .fa {
@@ -291,10 +291,10 @@ a:focus {
 
 .team .col-md-3{
 	position: static;
-	margin-bottom: 15px;
+	margin-bottom: 1.5rem;
 }
 .team-member {
-	border-bottom: 2px solid #9b9b9b;
+	border-bottom: 0.2rem solid #9b9b9b;
 	background: #fff;
 	text-align: center;
 	position: relative;
@@ -313,11 +313,11 @@ a:focus {
     border-color: transparent transparent #131313;
     border-image: none;
     border-style: solid;
-    border-width: 15px;
+    border-width: 1.5rem;
     content: " ";
     height: 0;
     left: 50%;
-    margin: 0 0 0 -15px;
+    margin: 0 0 0 -1.5rem;
     pointer-events: none;
     position: absolute;
     top: auto;
@@ -327,8 +327,8 @@ a:focus {
 .team-extended{
 	background: none repeat scroll 0 0 #131313;
     left: 0;
-    margin-top: 25px;
-    padding: 20px;
+    margin-top: 2.5rem;
+    padding: 2rem;
     overflow: hidden;
     position: absolute;
     text-align: left;
@@ -344,9 +344,9 @@ a:focus {
 	color: #fff;
 }
 .team-extended .social{
-	border: 1px solid #fff;
-	width: 25px;
-	margin-right: 7px;
+	border: 0.1rem solid #fff;
+	width: 2.5rem;
+	margin-right: 0.7rem;
 	color: #fff;
 	display: inline-block;
 	text-align: center;
@@ -354,17 +354,17 @@ a:focus {
 }
 .og-close{
 cursor: pointer;
-    height: 30px;
+    height: 3rem;
     position: absolute;
-    right: 20px;
-    top: 20px;
-    width: 30px;
+    right: 2rem;
+    top: 2rem;
+    width: 3rem;
 
 }
 .og-close:before, .og-close:after {
     background: none repeat scroll 0 0 #888;
     content: "";
-    height: 1px;
+    height: 0.1rem;
     position: absolute;
     top: 50%;
     transform: rotate(45deg);
@@ -383,18 +383,18 @@ cursor: pointer;
 	display: block;
 	text-transform: uppercase;
 	color: #0085C5;
-	font-size: 20px;
-	margin-bottom: 10px;
+	font-size: 2rem;
+	margin-bottom: 1rem;
 }
 .team-member .title {
 	display: block;
 	text-transform: uppercase;
 	color: #707070;
-	font-size: 16px;
-	margin-bottom: 10px;
+	font-size: 1.6rem;
+	margin-bottom: 1rem;
 }
 .team-member img {
-	margin-bottom: 10px;
+	margin-bottom: 1rem;
 }
 .branded-section {
 	width: 100%;
@@ -414,7 +414,7 @@ background-attachment: fixed;
 	width: 100%;
 	height: 100%;
 	display: block;
-	padding-bottom: 50px;
+	padding-bottom: 5rem;
 }
 .branded-section h1,
 .branded-section h2,
@@ -423,7 +423,7 @@ background-attachment: fixed;
 }
 blockquote {
 	text-align: center;
-	padding: 50px 0 0;
+	padding: 5rem 0 0;
 	width: 50%;
 	border: none;
 	position: relative;
@@ -460,57 +460,57 @@ background-attachment: fixed;
 }
 .percent {
 	display: block;
-	font-size: 35px;
-	letter-spacing: -3px;
-	line-height: 130px;
+	font-size: 30.5rem;
+	letter-spacing: -0.3rem;
+	line-height: 13rem;
 	
 	position: absolute;
 	text-align: center;
-	top: 5px;
+	top: 0.5rem;
 	width: 90%;
 	z-index: 10;
 }
 .number-item {
 	text-align: center;
-	border: 1px solid #0085C5;
-	padding: 20px;
+	border: 0.1rem solid #0085C5;
+	padding: 2rem;
 }
 .number-item .number {
 	display: block;
 	color: #fff;
-	font-size: 40px;
+	font-size: 4rem;
 	font-weight: bold;
 }
 .font-m {
-	font-size: 16px;
+	font-size: 1.6rem;
 }
 .font-l {
-	font-size: 20px;
+	font-size: 2rem;
 }
 .number-item .text {
 	color: #0085C5;
-	font-size: 16px;
+	font-size: 1.6rem;
 	text-transform: uppercase;
 }
 .circle {
 	background: #0085C5;
 	display: inline-block;
-	width: 50px;
-	height: 50px;
+	width: 5rem;
+	height: 5rem;
 	border-radius: 50%;
 	text-align: center;
-	line-height: 50px;
+	line-height: 5rem;
 }
 .circle-l {
-	width: 105px;
-	height: 105px;
+	width: 100.5rem;
+	height: 100.5rem;
 }
 .circle-l .fa {
-	line-height: 105px;
+	line-height: 100.5rem;
 	color: #fff;
 }
 .heading {
-	margin: 50px 0;
+	margin: 5rem 0;
 	text-align: center;
 	color: #000;
 	position: relative;
@@ -523,29 +523,29 @@ background-attachment: fixed;
 .heading h1 {
 	text-transform: uppercase;
 	font-weight: bold;
-	font-size: 30px;
+	font-size: 3rem;
 }
 .heading p {
-	font-size: 16px;
+	font-size: 1.6rem;
 	width: 80%;
 	margin: 0 auto;
 }
 .pad-bot-50 {
-	padding-bottom: 50px;
+	padding-bottom: 5rem;
 }
 .divider {
 	text-align: center;
-	margin-bottom: 10px;
+	margin-bottom: 1rem;
 }
 .divider > span {
 	display: inline-block;
-	width: 170px;
+	width: 17rem;
 	background: #0085C5;
-	height: 2px;
+	height: 0.2rem;
 }
 .adress-element {
 	text-align: center;
-	margin-bottom: 50px;
+	margin-bottom: 5rem;
 }
 .adress-element .fa {
 	color: #0085C5;
@@ -582,16 +582,16 @@ Images
 ********************************************/
 
 .text-slider-wrapper .bx-wrapper .bx-prev {
-	left: 10px;
+	left: 1rem;
 }
 .text-slider-wrapper .bx-wrapper .bx-next {
-	right: 10px;
+	right: 1rem;
 }
 .text-slider-wrapper .bx-wrapper .bx-prev:hover {} .text-slider-wrapper .bx-wrapper .bx-next:hover {} .text-slider-wrapper .bx-wrapper .bx-controls-direction a {
 	position: absolute;
 	opacity: 0;
 	top: 50%;
-	margin-top: -16px;
+	margin-top: -1.6rem;
 	outline: 0;
 	width: 32px;
 	height: 32px;
@@ -610,18 +610,18 @@ Images
 
 .page404{
 	text-align: center;
-	margin:150px auto;
+	margin:15rem auto;
 }
 
 .error-code{
-	font-size: 150px;
+	font-size: 15rem;
 	color: #0085C5;
 	margin: 0;
 
 }
 
 .error-desc{
-	font-size: 30px;
+	font-size: 3rem;
 	text-transform: uppercase;
 	font-weight: bold;
 	max-width: 500px;
@@ -630,7 +630,7 @@ Images
 }
 
 .page404 p{
-	padding: 50px;
+	padding: 5rem;
 }
 
 .page404 .form-control{
@@ -645,8 +645,8 @@ Forms
 	border-radius: 0;
 	-webkit-box-shadow: none;
 	box-shadow: none;
-	font-size: 15px;
-	padding: 20px;
+	font-size: 1.5rem;
+	padding: 2rem;
 }
 
 /********************************************
@@ -837,39 +837,39 @@ Forms
 }
 
 .goup span span:nth-of-type(1) { top: 0px;}
-.goup span span:nth-of-type(2) { top: 60px;}
-.goup span span:nth-of-type(3) { top: 120px;}
+.goup span span:nth-of-type(2) { top: 6rem;}
+.goup span span:nth-of-type(3) { top: 12rem;}
 .goup span span:nth-of-type(4) { top: 180px;}
 .goup span span:nth-of-type(5) { top: 240px;}
-.goup span span:nth-of-type(6) { top: 320px;}
+.goup span span:nth-of-type(6) { top: 32rem;}
 
 .goup:hover > span {
 	top: -240px;
 }
 
-.godown span span:nth-of-type(1) { top: 320px;}
+.godown span span:nth-of-type(1) { top: 32rem;}
 .godown span span:nth-of-type(2) { top: 240px;}
 .godown span span:nth-of-type(3) { top: 180px;}
-.godown span span:nth-of-type(4) { top: 120px;}
-.godown span span:nth-of-type(5) { top: 60px;}
+.godown span span:nth-of-type(4) { top: 12rem;}
+.godown span span:nth-of-type(5) { top: 6rem;}
 .godown span span:nth-of-type(6) { top: 0px;}
 
 .godown > span{
-	top: -320px;
+	top: -32rem;
 }
 .godown:hover > span{
-	top: -60px;
+	top: -6rem;
 }
 
 .goleft{
-	left: -30px;
+	left: -3rem;
 }
 
 .goleft span span:nth-of-type(1) { left: 0px;}
-.goleft span span:nth-of-type(2) { left: 30px;}
+.goleft span span:nth-of-type(2) { left: 3rem;}
 
 .goleft:hover > span{
-	left: -30px;
+	left: -3rem;
 }
 
 /********************************************
@@ -877,13 +877,13 @@ Forms
 ********************************************/
 
 .project {
-	margin-bottom: 40px;
+	margin-bottom: 4rem;
 }
 .project-loader {
 	text-align: center;
 	margin: 0 auto;
 	width: 80px;
-	margin-bottom: 40px;
+	margin-bottom: 4rem;
 }
 .full-portfolio {
 	list-style: none;
@@ -920,9 +920,9 @@ Forms
 	-ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	opacity: 0;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+	border-bottom: 0.1rem solid rgba(0, 0, 0, 0.3);
 	background: transparent;
-	margin: 20px 40px 0px 40px;
+	margin: 2rem 4rem 0px 4rem;
 	-webkit-transform: scale(10);
 	-moz-transform: scale(10);
 	-o-transform: scale(10);
@@ -999,16 +999,16 @@ Forms
 ********************************************/
 
 .client-slider {
-	margin-bottom: 70px;
+	margin-bottom: 7rem;
 }
 .client-nav {
 	list-style: none;
 	text-align: center;
-	margin-bottom: 70px;
+	margin-bottom: 7rem;
 }
 .client-nav > li {
 	display: inline-block;
-	margin-left: 10px;
+	margin-left: 1rem;
 	text-align: center;
 	padding: 0;
 }
@@ -1017,12 +1017,12 @@ Forms
 	background: #0085C5;
 	color: #fff;
 	vertical-align: middle;
-	width: 30px;
-	height: 30px;
+	width: 3rem;
+	height: 3rem;
 	display: block;
 }
 .client-nav > li > a .fa {
-	line-height: 30px;
+	line-height: 3rem;
 }
 /********************************************
 				COLORS AND BACKGROUNDS
@@ -1043,13 +1043,13 @@ Forms
 }
 .contact-form .form-control {
 	background-color: transparent;
-	margin-bottom: 20px;
-	padding: 20px;
+	margin-bottom: 2rem;
+	padding: 2rem;
 	color: #fff;
-	border-width: 2px;
+	border-width: 0.2rem;
 }
 .contact-form .form-control:focus {
-	border: 2px solid #FEE600;
+	border: 0.2rem solid #FEE600;
 }
 .contact-form .form-control:focus {
 	background: rgba(255, 255, 255, 0.1);
@@ -1065,7 +1065,7 @@ Forms
 ********************************************/
 
 footer {
-	padding-top: 20px;
+	padding-top: 2rem;
 	background: #131217;
 	text-align: center;
 	color: #fff;
@@ -1076,12 +1076,12 @@ footer .social-list a:hover {
 }
 footer .social-list {
 	list-style: none;
-	margin: 0 0 10px 0;
+	margin: 0 0 1rem 0;
 	padding: 0;
 }
 footer .social-list li {
 	display: inline-block;
-	padding: 10px;
+	padding: 1rem;
 }
 
 .social-list li a{
@@ -1116,32 +1116,32 @@ footer .social-list li {
 
 footer .to-top {
 	background: #0085C5;
-	width: 30px;
-	height: 30px;
+	width: 3rem;
+	height: 3rem;
 	display: block;
 	margin: 0 auto;
 }
 .bubblingG {
 	text-align: center;
 	width: 80px;
-	height: 50px;
+	height: 5rem;
 }
 .bubblingG span {
 	display: inline-block;
 	vertical-align: middle;
-	width: 10px;
-	height: 10px;
-	margin: 25px auto;
+	width: 1rem;
+	height: 1rem;
+	margin: 2.5rem auto;
 	background: #000000;
-	-moz-border-radius: 50px;
+	-moz-border-radius: 5rem;
 	-moz-animation: bubblingG 1.3s infinite alternate;
-	-webkit-border-radius: 50px;
+	-webkit-border-radius: 5rem;
 	-webkit-animation: bubblingG 1.3s infinite alternate;
-	-ms-border-radius: 50px;
+	-ms-border-radius: 5rem;
 	-ms-animation: bubblingG 1.3s infinite alternate;
-	-o-border-radius: 50px;
+	-o-border-radius: 5rem;
 	-o-animation: bubblingG 1.3s infinite alternate;
-	border-radius: 50px;
+	border-radius: 5rem;
 	animation: bubblingG 1.3s infinite alternate;
 }
 #bubblingG_1 {
@@ -1167,8 +1167,8 @@ footer .to-top {
 }
 @-moz-keyframes bubblingG {
 	0% {
-		width: 10px;
-		height: 10px;
+		width: 1rem;
+		height: 1rem;
 		background-color: #000000;
 		-moz-transform: translateY(0);
 	}
@@ -1181,8 +1181,8 @@ footer .to-top {
 }
 @-webkit-keyframes bubblingG {
 	0% {
-		width: 10px;
-		height: 10px;
+		width: 1rem;
+		height: 1rem;
 		background-color: #000000;
 		-webkit-transform: translateY(0);
 	}
@@ -1195,8 +1195,8 @@ footer .to-top {
 }
 @-ms-keyframes bubblingG {
 	0% {
-		width: 10px;
-		height: 10px;
+		width: 1rem;
+		height: 1rem;
 		background-color: #000000;
 		-ms-transform: translateY(0);
 	}
@@ -1209,8 +1209,8 @@ footer .to-top {
 }
 @-o-keyframes bubblingG {
 	0% {
-		width: 10px;
-		height: 10px;
+		width: 1rem;
+		height: 1rem;
 		background-color: #000000;
 		-o-transform: translateY(0);
 	}
@@ -1223,8 +1223,8 @@ footer .to-top {
 }
 @keyframes bubblingG {
 	0% {
-		width: 10px;
-		height: 10px;
+		width: 1rem;
+		height: 1rem;
 		background-color: #000000;
 		transform: translateY(0);
 	}
@@ -1244,45 +1244,45 @@ footer .to-top {
 	-webkit-transform: translateZ(0);
 	-ms-transform: translateZ(0);
 	transform: translateZ(0);
-	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	box-shadow: 0 0 0.1rem rgba(0, 0, 0, 0);
 }
 .down:hover {
-	-webkit-transform: translateY(5px);
-	-ms-transform: translateY(5px);
-	transform: translateY(5px);
+	-webkit-transform: translateY(0.5rem);
+	-ms-transform: translateY(0.5rem);
+	transform: translateY(0.5rem);
 }
 /*****************************************
 RESPONSIVE
 *****************************************/
 
 .lead {
-	margin-bottom: 20px;
+	margin-bottom: 2rem;
 }
-@media (max-width: 767px) {
+@media (max-width: 76.7rem) {
 	.navbar-smak {
 		background: rgba(19, 19, 22, 0.7);
 	}
 	.navbar-smak .nav {
-		padding: 5px 0;
+		padding: 0.5rem 0;
 	}
 	.navbar-smak .navbar-brand > img {
-		height: 40px;
+		height: 4rem;
 	}
 	.navbar-smak .navbar-brand {
-		padding: 5px 15px 0 0;
+		padding: 0.5rem 1.5rem 0 0;
 	}
 	.lead {
-		font-size: 30px;
-	}
-}
-@media (min-width: 768px) and (max-width: 991px) {
-	.lead {
-		font-size: 30px;
+		font-size: 3rem;
 	}
 }
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 76.8rem) and (max-width: 99.1rem) {
 	.lead {
-		font-size: 30px;
+		font-size: 3rem;
+	}
+}
+@media (min-width: 99.2rem) and (max-width: 119.9rem) {
+	.lead {
+		font-size: 3rem;
 	}
 }
 
@@ -1305,7 +1305,7 @@ RESPONSIVE
 	position:absolute;
 	top:50%;
 	left:50%;
-	margin-top:-20px;
+	margin-top:-2rem;
 	margin-left:-40px;
 }
 
@@ -1329,5 +1329,5 @@ RESPONSIVE
 
 
 .thumb-wrap{
-	margin-bottom: 50px;
+	margin-bottom: 5rem;
 }
