--- a/Material/css/style.css
+++ b/Material/css/style.css
@@ -223,3 +223,76 @@ xtype
 }
 
 
+#markets {
+    background-color: rgba(234, 233, 233, 0.36);
+}
+
+.partners-section {
+  background-image: url(../img/grid.jpg); 
+  background-size: cover;
+  min-height: 300px
+
+}
+
+.logo-center {
+    width: 100%;
+}
+i.fa.fa-fire-extinguisher {
+    margin-left: 14px;
+}
+
+.slider1_container {
+  position: relative;
+  top: 30px;
+  left: 10%;
+  width: 100%;
+  height: 300px; 
+  overflow: hidden;
+}
+
+.loading {
+  position: relative;
+  top: 30px;
+  left: 10%;
+}
+
+.filter-slide {
+  filter: alpha(opacity=70);
+  opacity:0.7;
+  position: absolute;
+  display: block;
+  background-color: #000;
+  top: 30px;
+  left: 10%;
+  width: 200px;
+  height:300px;
+}
+
+.loadingGif {
+  position: absolute;
+  display: block;
+  background: url(../img/loading.gif) no-repeat center center;
+  top: 30px;
+  left: 10%;
+  width: 100%;
+  height:300px;
+}
+
+.slides {
+  cursor: move;
+  position: absolute;
+  top: 30px;
+  left: 10%;
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+}
+
+.image-slide {
+width: 100%;
+
+}
+
+.image-slide-container {
+
+}
