--- a/Material/css/style.css
+++ b/Material/css/style.css
@@ -230,7 +230,8 @@ xtype
 .partners-section {
   background-image: url(../img/grid.jpg); 
   background-size: cover;
-  min-height: 300px
+  min-height: 300px;
+  padding: 0;
 
 }
 
@@ -295,4 +296,41 @@ width: 100%;
 
 .image-slide-container {
 
+}
+
+
+/* 
+  jQuery Logo Slider Ticker 
+  by http://webdesignandsuch.com
+  build with code from http://bxslider.com
+*/
+
+#slider {
+  list-style:none;
+  padding:0px
+}
+
+.slider-container { 
+  background:rgba(34, 34, 34, 0.6); 
+  width:100%; 
+  height:300px; 
+  padding:20px; 
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px; 
+}
+
+#slider img { 
+  width:200px; 
+  /*height:125px; */
+  margin:0px; 
+  display:inline-block  
+}
+
+#slider li {
+  width:210px
+}
+
+.bx-window {
+  width: 100%;
 }
