--- a/Material/css/style.css
+++ b/Material/css/style.css
@@ -227,7 +227,9 @@ xtype
     background-color: rgba(234, 233, 233, 0.36);
 }
 
-
+.fa {
+  visibility: inherit !important;
+}
 
 .logo-center {
     width: 100%;
@@ -236,6 +238,7 @@ i.fa.fa-fire-extinguisher {
     margin-left: 14px;
 }
 
+/*
 .slider1_container {
   position: relative;
   top: 30px;
@@ -243,9 +246,9 @@ i.fa.fa-fire-extinguisher {
   width: 100%;
   height: 300px; 
   overflow: hidden;
-}
+}*/
 
-.loading {
+/*.loading {
   position: relative;
   top: 30px;
   left: 10%;
@@ -291,7 +294,7 @@ width: 100%;
 .image-slide-container {
 
 }
-
+*/
 
 /* 
   jQuery Logo Slider Ticker 
@@ -307,7 +310,7 @@ width: 100%;
 .slider-container { 
   background:rgba(34, 34, 34, 0.6); 
   width:100%; 
-  height:300px; 
+  /*height:200px; */
   padding:20px 0 20px 0; 
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
@@ -318,7 +321,12 @@ width: 100%;
   width:200px; 
   /*height:125px; */
   margin:0px; 
-  display:inline-block  
+  display:inline-block;
+  /*  -webkit-filter: grayscale(100);
+  filter: grayscale(100);
+   -webkit-filter: brightness(3);
+  filter: brightness(3);*/
+
 }
 
 #slider li {
@@ -337,6 +345,6 @@ width: 100%;
 .partners-section {
   background-image: url(../img/grid.jpg); 
   background-size: cover;
-  min-height: 300px;
+  min-height: 100px;
   padding: 0 !important;
 }
