--- a/Material/css/style.css
+++ b/Material/css/style.css
@@ -62,7 +62,14 @@
 	color: rgb(1, 114, 183);
 	font-size: 7rem;
 	display: block;
+   text-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.2s ease-in-out;
 }
+
+.promo i:hover {
+  text-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
 .card-content a {color: rgb(1, 114, 183);}
 
 .card-content a:hover {color: rgb(1, 114, 183);}
