--- a/Material/css/style.css
+++ b/Material/css/style.css
@@ -227,7 +227,20 @@ xtype
   font-weight: 100;
   color: white;
   }
+
+  a#logo-container {
+    font-size: 1.2rem;
+    margin-left: 10%;
+  }
 }
+
+@media only screen and (min-width: 480px) {
+  a#logo-container {
+    font-size: 2rem;
+    margin-left: 10%;
+  }
+}
+
 
 
 #markets {
@@ -315,7 +328,7 @@ width: 100%;
 }
 
 .slider-container { 
-  background:rgba(34, 34, 34, 0.6); 
+  /*background:rgba(34, 34, 34, 0.6); */
   width:100%; 
   /*height:200px; */
   padding:20px 0 20px 0; 
@@ -325,15 +338,12 @@ width: 100%;
 }
 
 #slider img { 
-  width:200px; 
-  /*height:125px; */
-  margin:0px; 
+  max-width:100%; 
+  /*height:100%;*/
+  max-height: 50px; 
+  margin:0px;
+  padding: 10px;
   display:inline-block;
-  /*  -webkit-filter: grayscale(100);
-  filter: grayscale(100);
-   -webkit-filter: brightness(3);
-  filter: brightness(3);*/
-
 }
 
 #slider li {
@@ -350,7 +360,7 @@ width: 100%;
 }
 
 .partners-section {
-  background-image: url(../img/grid.jpg); 
+  /*background-image: url(../img/grid.jpg); */
   background-size: cover;
   min-height: 100px;
   padding: 0 !important;
